fixed overlapping issue on homepage banner

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .banner {
   height: 100vh;
-  position: absolute;
+  margin-top: -80px;
   bottom:0;
   z-index: 0;
 }
